chore(pom): fix maven profiles